Fixed Dive page alignment

--- a/src/views/css/style2.css
+++ b/src/views/css/style2.css
@@ -6,7 +6,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     margin: 0;
     padding: 0;
     display: flex;
@@ -30,7 +30,7 @@ main {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 20px;
     border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 50px; 
 }
 
 @media (max-width: 600px) {
@@ -100,6 +100,7 @@ select {
     justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
+    margin-bottom: 20px; /* Add margin here */
 }
 
 .button {
@@ -139,12 +140,10 @@ footer {
     font-family: Arial, Helvetica, sans-serif;
     color: #DEC4AD;
     background-color: #231F20;
-    position: static;
-    width: 100%;
-    bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     height: 60px;
+    margin-top: 200px; 
 }
